added get request for all albums and by album id
