# docs/swagger.json
@@ -18,6 +18,27 @@
     "basePath": "/api/v1",
     "paths": {
         "/albums": {
+            "get": {
+                "description": "returns all albums in the system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "albums"
+                ],
+                "summary": "get all albums",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "add an album by posting json",
                 "consumes": [
